Small Firefox CSS fix
The clipboard icon inside the group invite <input> was not vertically
centered in Firefox. Also the bottom of the text in the <input> was
getting clipped in Firefox. This fixes both.

--- a/h/static/styles/partials-v2/_group-invite.scss
+++ b/h/static/styles/partials-v2/_group-invite.scss
@@ -9,13 +9,14 @@
 
 .group-invite__input {
   padding: 5px;
-  padding-top: 7px;
-  padding-bottom: 7px;
+  padding-top: 0;
+  padding-bottom: 0;
   margin-top: 12px;
   margin-bottom: 8px;
   border: 1px solid $grey-3;
   border-radius: 2px;
   width: 100%;
+  height: 31px;
 
   .env-js-capable & {
     padding-right: 22px;  /* Make space for the clipboard icon. */
